# pipeline

./: .flake8  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  conftest.py  environment.yml  pipeline.db  pyproject.toml
pipeline/: conversion.py  databus.py  main.py  settings.py
tests/: test_conversion.py  test_databus.py
tests/data/: parametermodel.csv  parametermodel.json
