[tool.poetry]
name = "sedos-pipeline"
version = "0.1.0"
description = "SEDOS pipeline"
authors = ["Hendrik Huyskens <hendrik.huyskens@rl-institut.de>"]
readme = "README.md"
packages = [{include = "sedos_pipeline"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pylint = "^2.15.3"
pytest = "^7.1.3"
mccabe = "^0.7.0"
bandit = "^1.7.4"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^22.9.23"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
darglint = "^1.8.1"
flake8-eradicate = "^1.4.0"
flake8-isort = "^4.2.0"
flake8-mutable = "^1.2.0"
flake8-pytest-style = "^1.6.0"
pep8-naming = "^0.13.2"
pytest-sugar = "^0.9.5"
add-trailing-comma = "^2.3.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
